init zones routes
