# whareflow-server/internal/deliviry/http/v1/model/zone.go
@@ -1,0 +1,7 @@
+package delivery
+
+type ZoneModelRequest struct {
+	Name        string `json:"name"`
+	Capacity    int    `json:"capacity"`
+	WarehouseId int    `json:"warehouse_id"`
+}
